--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Arista</string>
+    <string name="app_name">P7E_Arista</string>
     <string name="user_data">User Data</string>
     <string name="exercise">Exercises</string>
     <string name="sleep">Sleep</string>
